# esp32S3_eye_project

./: .clang-format  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: README.md
.github/workflows/: build.yml  code-quality.yml  docs.yml  main.yml  release.yml  security.yml  testing.yml
.github/workflows/templates/: build-template.yml
docs/examples/: example-template.md
examples/lcd_display/: .clangd  CMakeLists.txt  README.md  pytest.ini  sdkconfig  sdkconfig.defaults
examples/lcd_display/docs/diagrams/: lcd_display_state.md
examples/lcd_display/docs/diagrams/src/: lcd_display_state.puml
examples/lcd_display/main/: CMakeLists.txt  capture_helpers.c  capture_helpers.h  idf_component.yml  main.c
examples/lcd_display/partitions/: partitions_esp_who.csv
examples/lcd_display/tests/: CMakeLists.txt  capture_helpers_test.c
examples/lcd_display/tests/qemu/: README.md  pytest_boot.py  pytest_ready.py
tools/docker/: docker-compose.yml
tools/docker/host-test/: Dockerfile  run-tests.sh
